--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=ALWAYS
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+app.velocity.templates.location=/templates/
+app.token.password.reset.duration=3600000
