REFACTOR:  ADD ALL --REV7

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 app.velocity.templates.location=/templates/
 app.token.password.reset.duration=3600000
+# Max file size.
+spring.servlet.multipart.max-file-size=5MB
+# Max request size.
+spring.servlet.multipart.max-request-size=10MB
