--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/helpdesk
 spring.datasource.username=root
-spring.datasource.password=orlando123
+spring.datasource.password=orlando
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -16,3 +16,4 @@ app.token.password.reset.duration=3600000
 spring.servlet.multipart.max-file-size=5MB
 # Max request size.
 spring.servlet.multipart.max-request-size=10MB
+app.token.email.verification.duration=3600000
