--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,10 +1,15 @@
 #Mail properties. Enable less secure apps if using Gmail id
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
-spring.mail.username=nexuscode25@gmail.com
-spring.mail.password=$$Anprog1
-spring.mail.port=587
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=nexuscode25@gmail.com
+#spring.mail.password=$$Anprog1
+#spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.debug=true
 spring.mail.smtp.auth=true
 spring.mail.smtp.starttls.enable=true
+
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=effective_code@hotmail.com
+spring.mail.password=$$Anprog1
