--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/helpdesk
-spring.datasource.username=root
-spring.datasource.password=orlando
+spring.datasource.url=jdbc:mysql://y6aj3qju8efqj0w1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ykrkqw63qzkj4kh4
+spring.datasource.username=rjle9londfmkcs1c
+spring.datasource.password=vfkrhm8b2yo9bt5n
 
 spring.jpa.hibernate.ddl-auto=update
 
