--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://y6aj3qju8efqj0w1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ykrkqw63qzkj4kh4
 spring.datasource.username=rjle9londfmkcs1c
 spring.datasource.password=vfkrhm8b2yo9bt5n
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=ALWAYS
